# ADOL-C

./: CMakeLists.txt
ADOL-C/: CMakeLists.txt
ADOL-C/include/adolc/internal/: CMakeLists.txt
